# chaos-operator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chaos_operator/: actions.py  experiment.py  operator.py  orchestration.py  probes.py  runner.py  safety.py  steady_state.py
chaos_operator/experiments/: cpu_stress.py  network_chaos.py  pod_failure.py
docs/adr/: 0001-steady-state-as-a-statistical-claim.md  0002-abort-on-blast-radius.md
examples/: demo_safe_run.py  safe-experiment.yaml
k8s/: operator-deployment.yaml  rbac.yaml
k8s/crds/: chaosexperiment.yaml
scripts/: validate_crd.py
tests/: test_network_chaos.py  test_operator.py  test_orchestration.py  test_pod_failure.py  test_runner.py  test_safety.py  test_steady_state.py
