[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-operator"
version = "0.1.0"
description = "A Kubernetes chaos-engineering operator with steady-state verification and blast-radius safety guards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "kubernetes>=28.1.0",
    "kopf>=1.37.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.11",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools]
packages = ["chaos_operator", "chaos_operator.experiments"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
